feat: further polish
